chore: build.gradle 수정 - Sonarqube 설정 이동