@@ -30,37 +30,34 @@ allprojects {
 }
 
 sonarqube {
-    def exclusions = extractQClass()
-    file("${rootDir}/config/jacoco/exclude-coverage.txt").eachLine {
-        exclusions.add(it)
-    }
-
     properties {
-        property("sonar.projectKey", System.getenv("SONAR_PROJECT_KEY"))
         property("sonar.organization", "dailyge")
-        property("sonar.host.url", System.getenv("SONAR_HOST_URL"))
-        property("sonar.login", System.getenv("SONAR_TOKEN"))
-        property("sonar.language", "Java")
+        property("sonar.token", System.getenv("SONAR_TOKEN"))
+        property("sonar.projectKey", System.getenv("SONAR_PROJECT_KEY"))
+        property("sonar.host.url", "https://sonarcloud.io")
+        property("sonar.language", "java")
         property("sonar.sourceEncoding", "UTF-8")
+        property("sonar.test.inclusions", "**/*Test.java")
+        property("sonar.scm.forceReloadAll", "true")
+
+        def exclusions = []
+        file("${rootDir}/config/jacoco/exclude-coverage.txt").eachLine {
+            exclusions.add(it)
+        }
         property("sonar.exclusions", exclusions.join(", "))
         property("sonar.java.coveragePlugin", "jacoco")
-        property(
-                "sonar.coverage.jacoco.xmlReportPaths",
-                "${rootDir}/storage/document/build/reports/jacoco/test/jacocoTestReport.xml, " +
-                        "${rootDir}/storage/rdb/build/reports/jacoco/test/jacocoTestReport.xml"
-        )
     }
 }
 
 subprojects {
     apply(plugin: "pmd")
+    apply(plugin: "java")
     apply(plugin: "jacoco")
     apply(plugin: "checkstyle")
-    apply(plugin: "java")
+    apply(plugin: "application")
     apply(plugin: "java-library")
     apply(plugin: "org.springframework.boot")
     apply(plugin: "io.spring.dependency-management")
-    apply(plugin: "application")
     apply(plugin: "com.google.cloud.tools.jib")
 
     repositories {
@@ -93,9 +90,11 @@ subprojects {
     jacocoTestReport {
         reports {
             xml.required = true
-            html.required = true
+            html.required = false
             csv.required = false
+            xml.destination = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
         }
+
         afterEvaluate {
             def exclusions = extractQClass()
             file("${rootDir}/config/jacoco/exclude-coverage.txt").eachLine {
@@ -138,11 +137,16 @@ subprojects {
     }
 
     tasks.test {
-        jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED',
-                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                '--add-opens', 'java.base/java.util=ALL-UNNAMED'
         useJUnitPlatform()
         finalizedBy jacocoTestReport
+    }
+
+    sonarqube {
+        properties {
+            property("sonar.java.binaries", "${buildDir}/classes/java/main")
+            property("sonar.sources", "${projectDir}/src/main/java")
+            property 'sonar.coverage.jacoco.xmlReportPaths', "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+        }
     }
 
     checkstyle {
